# fpga-lmc

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
include/: cli.h  fpga_serial.h  leap_math.h  lmc.h  serial_device.h  struct_expand.h  win_ex.h
lib/LeapSDK/: README.md  ThirdPartyNotices.md
lib/LeapSDK/include/: LeapC.h
lib/LeapSDK/lib/cmake/LeapSDK/: leapsdk-configVersion.cmake
lib/LeapSDK/samples/: CMakeLists.txt  ExampleConnection.c  MultiDeviceSample.c
src/: cli.c  fpga-lmc.c  leap_math.c  lmc.c  serial_device.c  win_ex.c
